# qlikflow

./: .gitignore  CHANGELOG.md  README.md  config_generator.py  pyproject.toml  requirements.txt  requirements_gen.cmd  setup.cfg  simpledagfile.py
doc/: readme.md
docker/: docker-compose.yaml  dockerfile
docker/cert/: readme.md
docker/config/: config.json
docker/dags/: config.json  readme.md  simpledagfile.py
docker/logs/: readme.md
docker/plugins/: readme.md
qlikflow/: init.py  qlikflow.py
