[tool.poetry]
name = "qlikflow"
version = "1.0.1"
description = "This module allows you to create simple Apache Airflow DAG files-constructors for QlikView, Qlik Sense and NPrinting."
authors = ["bintocher <schernov1@gmail.com>"]
license = "Apache 2.0"
repository = "https://github.com/bintocher/qlikflow"
documentation = "https://github.com/bintocher/qlikflow/doc"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
