[tool.poetry]
name = "qlikflow"
version = "1.0.3"
description = "This module allows you to create simple Apache Airflow DAG files-constructors for QlikView, Qlik Sense and NPrinting."
authors = ["bintocher <schernov1@gmail.com>"]
license = "Apache 2.0"
repository = "https://github.com/bintocher/qlikflow"
documentation = "https://github.com/bintocher/qlikflow/blob/main/doc/readme.md"
readme = "README.md"
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.7"

requests = "^2.25.1"
requests-ntlm = "^1.1.0"
apache-airflow = "^2.0.0"
zeep = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
