[metadata]
name = qlikflow
version=1.0
author = Stanislav Chernov
author_email = schernov1@gmail.com
description = This module allows you to create simple Apache Airflow DAG files-constructors for QlikView, Qlik Sense and NPrinting.
long_description = file: README.md
url = https://github.com/bintocher/qlikflow
classifiers=
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
packages=find_packages()
